# scalpel

./: .gitignore  Cargo.toml  LICENSE  NOTICES  README.md  rustfmt.toml
.github/workflows/: m0.yml  real-mupdf.yml  release.yml
crates/pdbg-app/: Cargo.toml  build.rs
crates/pdbg-app/src/: gui.rs  lib.rs  main.rs
crates/pdbg-app/src/gui/: app.rs  draw.rs  files.rs  jobs.rs  labels.rs  layout.rs  mod.rs  preview.rs  stream.rs  tests.rs  theme.rs  tree.rs
crates/pdbg-contract-tests/: Cargo.toml
crates/pdbg-contract-tests/src/: lib.rs
crates/pdbg-core/: Cargo.toml
crates/pdbg-core/src/: capabilities.rs  config.rs  diagnostics.rs  dto.rs  egress.rs  lib.rs  panic_boundary.rs  registry.rs  search.rs  session.rs  shim.rs  wire.rs
crates/pdbg-mcp/: Cargo.toml
crates/pdbg-mcp/src/: lib.rs
crates/pdbg-shim/: Cargo.toml  build.rs
crates/pdbg-shim/c/: pdbg_shim_fake.c  pdbg_shim_mupdf.c
crates/pdbg-shim/include/: pdbg_shim.h
crates/pdbg-shim/src/: lib.rs  raw.rs
crates/scalpel-app/: Cargo.toml  build.rs
crates/scalpel-app/assets/windows/: scalpel.rc
crates/scalpel-app/src/: lib.rs  main.rs
crates/scalpel-app/src/gui/: app.rs  draw.rs  files.rs  jobs.rs  labels.rs  layout.rs  mod.rs  preview.rs  stream.rs  tests.rs  theme.rs  tree.rs  updates.rs
crates/scalpel-contract-tests/: Cargo.toml
crates/scalpel-contract-tests/src/: lib.rs
crates/scalpel-core/: Cargo.toml
crates/scalpel-core/src/: capabilities.rs  config.rs  diagnostics.rs  dto.rs  egress.rs  panic_boundary.rs  registry.rs  search.rs  shim.rs  wire.rs
crates/scalpel-mcp/: Cargo.toml
crates/scalpel-mcp/src/: lib.rs
crates/scalpel-shim/: Cargo.toml  build.rs
crates/scalpel-shim/c/: pdbg_shim_fake.c  pdbg_shim_mupdf.c
crates/scalpel-shim/include/: pdbg_shim.h
crates/scalpel-shim/src/: lib.rs  raw.rs
docs/: brand-logo.md  design-review.md  milestone-0-plan.md  milestone-1-plan.md  milestone-1-ui-shell-spike.md  milestone-2-plan.md  milestone-3-plan.md  pdf-debugger-architecture.md  product-shape.md
docs/adr/: 0001-mupdf-m0-build-policy.md  0002-mupdf-m1-source-link-policy.md
docs/ci/: required-jobs.md
docs/compliance/: agpl-source-offer.md
docs/ui/: pdfbox-reference-notes.md
fixtures/: README.md
scripts/: check_notices.py  check_pdbg_shim_abi_snapshot.py  fz_try_gate.py  package-macos-app.sh  package-macos-dmg.sh  run_m0_fuzz_smoke.sh  run_m0_local_gate.sh  run_m1_real_gate.sh  run_m3_local_gate.sh  run_real_gate.sh  setup-mupdf.ps1  setup-mupdf.sh  test_fz_try_gate.sh  tsan_mupdf.supp
scripts/fz_try_fixtures/: bad_return.c  good.c
