[workspace]
members = [
    "crates/scalpel-app",
    "crates/scalpel-contract-tests",
    "crates/scalpel-core",
    "crates/scalpel-mcp",
    "crates/scalpel-shim",
]
resolver = "2"

[workspace.package]
version = "0.2.8"
edition = "2021"
license = "AGPL-3.0-only"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
