[package]
name = "pdbg-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["glow", "default_fonts"], optional = true }
pdbg-core = { path = "../pdbg-core" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "pdbg-app"
path = "src/main.rs"

[features]
default = []
gui = ["dep:eframe"]
