[package]
name = "pdbg-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["glow", "default_fonts", "wayland", "x11"], optional = true }
pdbg-core = { path = "../pdbg-core", default-features = false }

[lib]
path = "src/lib.rs"

[[bin]]
name = "pdbg-app"
path = "src/main.rs"

[features]
default = []
gui = ["dep:eframe"]
real-mupdf = ["pdbg-core/real-mupdf"]
