[package]
name = "pdbg-contract-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pdbg-app = { path = "../pdbg-app", default-features = false }
pdbg-core = { path = "../pdbg-core", default-features = false, features = ["fake"] }
pdbg-mcp = { path = "../pdbg-mcp" }
pdbg-shim = { path = "../pdbg-shim", default-features = false, features = ["fake"] }

[lib]
path = "src/lib.rs"
