[package]
name = "scalpel-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["glow", "default_fonts", "wayland", "x11"], optional = true }
scalpel-core = { path = "../scalpel-core", default-features = false }
rfd = { version = "0.15.4", optional = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "scalpel"
path = "src/main.rs"

[features]
default = ["gui", "real-mupdf"]
gui = ["dep:eframe", "dep:rfd"]
real-mupdf = ["scalpel-core/real-mupdf"]
