[package]
name = "scalpel-contract-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
scalpel-app = { path = "../scalpel-app", default-features = false }
scalpel-core = { path = "../scalpel-core", default-features = false, features = ["fake"] }
scalpel-mcp = { path = "../scalpel-mcp" }
scalpel-shim = { path = "../scalpel-shim", default-features = false, features = ["fake"] }

[lib]
path = "src/lib.rs"
